fix(modal): footer modal overlap-above z-index
pour etre au dessus du tooltip

--- a/src/component/modal/style/_module.scss
+++ b/src/component/modal/style/_module.scss
@@ -128,7 +128,7 @@
     @include margin-top(-10v);
     @include margin-top(-12v, md);
     @include sticky(null,null,0);
-    @include z-index(above);
+    @include elevation.z-index(overlap-over);
     transition: box-shadow 0.3s;
 
     @include preference.forced-colors {
